<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

        <RadioGroup
                android:id="@+id/groupType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <RadioButton
                    android:text="@string/income"
                    android:id="@+id/rbIncome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_weight="1"/>
            <RadioButton
                    android:id="@+id/rbOutgo"
                    android:text="@string/outgo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorAccent"
                    android:layout_weight="1"/>
            <RadioButton
                    android:text="@string/transaction"
                    android:id="@+id/rbTransaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
            />
        </RadioGroup>

        <TextView
                android:id="@+id/titleValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/value"
                app:layout_constraintTop_toBottomOf="@+id/groupType"
                android:layout_marginTop="10dp"
        />

        <EditText
                android:id="@+id/etValue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="value"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/titleValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <TextView
                android:id="@+id/titleDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/etValue"
                android:layout_marginTop="10dp"
        />

        <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="description"
                app:layout_constraintTop_toBottomOf="@id/titleDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />


        <TextView
                android:id="@+id/titleFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from"
                app:layout_constraintTop_toBottomOf="@+id/etDescription"
                android:layout_marginTop="10dp"
        />

        <Spinner
                android:id="@+id/spFrom"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="from"
                app:layout_constraintTop_toBottomOf="@id/titleFrom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />


        <TextView
                android:id="@+id/titleTo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to"
                app:layout_constraintTop_toBottomOf="@+id/spFrom"
                android:layout_marginTop="10dp"
        />

        <Spinner
                android:id="@+id/spTo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="to"
                app:layout_constraintTop_toBottomOf="@id/titleTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />

        <Button
                android:id="@+id/btnSave"
                android:text="@string/save"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/spTo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/colorPrimary"
                app:layout_constraintVertical_bias="1"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
        />
    </android.support.constraint.ConstraintLayout>
</ScrollView>