<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:context=".main.view.MainActivity">

    <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:iconifiedByDefault="false"
    />

    <TextView
            android:id="@+id/tvOperations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/operations"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            app:layout_constraintBottom_toTopOf="@+id/rvOperations"
            android:textSize="18sp"

    />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvOperations"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvOperations"
            app:layout_constraintBottom_toTopOf="@+id/tvAccounts"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
    >

    </android.support.v7.widget.RecyclerView>

    <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@color/colorPrimaryDark"
            app:layout_constraintBottom_toTopOf="@+id/tvAccounts"
    />
    <TextView
            android:id="@+id/tvAccounts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accounts"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="18sp"
    />

    <android.support.v7.widget.RecyclerView
            android:id="@+id/rvAccounts"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/tvAccounts"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
    >

    </android.support.v7.widget.RecyclerView>

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="10dp"
            android:src="@drawable/ic_add"
            app:layout_constraintVertical_bias="1"
    />

    <android.support.design.widget.FloatingActionButton
            android:id="@+id/fabCreateOperation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/rvOperations"
            android:layout_margin="10dp"
            android:src="@drawable/ic_add"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1"
    />

</android.support.constraint.ConstraintLayout>