...
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:layout_marginTop="10dp"
        />

        <EditText
                android:id="@+id/etName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="name"
                app:layout_constraintTop_toBottomOf="@id/titleName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
...
